byte-code-compiler/test_files/typing/bad/testfile-undef_field-1.psc
class S {
  i32 a;
};

i32 main() {
  S p;
  p.b = 1;
}
